# BowlingGame

./: CMakeLists.txt  README.md
Test/UnitTests/: BowlingGameTest.cpp  CMakeLists.txt
UnitTests/: BowlingFramesTest.cpp  BowlingGameTest.cpp  MyPlayerTest.cpp
include/: BowlingApp.h  BowlingFrames.h  Constants.h  MyPlayer.h
src/: BowlingApp.cpp  BowlingFrames.cpp  MyPlayer.cpp  main.cpp
